@@ -29,6 +29,7 @@
         <element value="plone.app.dexterity.behaviors.metadata.IBasic"/>
         <element value="plone.app.content.interfaces.INameFromTitle" />
         <element value="plone.app.referenceablebehavior.referenceable.IReferenceable"/>
+        <element value="plone.app.dexterity.behaviors.exclfromnav.IExcludeFromNavigation" />
     </property>
 
     <!-- View information -->
