@@ -1,0 +1,11 @@
+<?xml version="1.0"?>
+<object name="ftw.news.NewsFolder"
+        meta_type="Dexterity FTI"
+        xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+        i18n:domain="ftw.news">
+
+    <property name="behaviors" purge="False">
+        <element value="plone.app.dexterity.behaviors.exclfromnav.IExcludeFromNavigation" />
+    </property>
+
+</object>
